@@ -174,3 +174,6 @@ cython_debug/
 
 # MacOS
 .DS_Store
+
+# Repomix for outputing files: repomix --ignore "tests/data/**"
+repomix-output.txt
